--- a/Sistēma/interneta-veikals/package.json
+++ b/Sistēma/interneta-veikals/package.json
@@ -9,11 +9,15 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "express": "^4.18.2",
+    "mysql2": "^3.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^2.1.3",
+    "sequelize": "^6.31.0",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
