--- a/Sistēma/interneta-veikals/package.json
+++ b/Sistēma/interneta-veikals/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "mysql2": "^3.2.3",
     "react": "^18.2.0",
+    "react-auth-kit": "^2.12.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^2.1.3",
