--- a/Sistēma/interneta-veikals/package.json
+++ b/Sistēma/interneta-veikals/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "^2.1.3",
     "sequelize": "^6.31.0",
     "styled-components": "^5.3.9",
+    "text-marshal": "^0.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
