--- a/Sistēma/backend/package.json
+++ b/Sistēma/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon api.js"
+    "start": "node api.js --omit=dev",
+    "dev": "nodemon api.js"
   },
   "keywords": [],
   "author": "",
